Details
-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.0
-
None
-
Nokia N97
Symbian 5th edition
-
5712c62d1cfdcf56c772d8a63d52ad58945f194c
Description
When there is not enough space for rendering a complete line of a multi-line item, the renderer stops rendering completely and the following lines are not drawn at all.
Problem seems to be caused by the "break;" in the loops found in QCommonStylePrivate::viewItemDrawText() in gui/styles/qcommonstyle.cpp.
Rendering should not stop when there are more lines to render.
Attached project demonstrates the issue.
Attachments
Issue Links
- duplicates
-
QTBUG-12129 text eliding does not work correctly when a section's width is larger than the last visible line
-
- Closed
-
- is duplicated by
-
QTBUG-10379 When a line of text is elided in a multi-line text field, all subsequent lines are removed.
-
- Closed
-